Fix: Horizontal scrolling appears while editing when direction set to row in Container (#21805) [ED-10302]

--- a/assets/dev/scss/editor/preview/_container.scss
+++ b/assets/dev/scss/editor/preview/_container.scss
@@ -182,17 +182,14 @@
 	}
 
 	// To avoid horizontal scroll
-	&.e-con {
+	.ui-resizable {
 
-		.ui-resizable {
+		&-e {
+			right: 0;
+		}
 
-			&-e {
-				right: 0;
-			}
-
-			&-w {
-				left: 0;
-			}
+		&-w {
+			left: 0;
 		}
 	}
 }
